Fix eror in yaml file

--- a/tools/spades/.shed.yml
+++ b/tools/spades/.shed.yml
@@ -1,19 +1,19 @@
 name: spades
 owner: iuc
-remote_repository_url: "https://github.com/galaxyproject/tools-iuc/tree/master/tools/spades"
-homepage_url: "https://github.com/ablab/spades"
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/spades
+homepage_url: https://github.com/ablab/spades
 long_description: |
-  SPAdes - St. Petersburg genome assembler - is an assembly toolkit containing various assembly pipelines.
+  SPAdes is an assembly toolkit containing various assembly pipelines. It implements the following 4 stages: assembly graph construction, k-bimer adjustment, construction of paired assembly graph and contig construction.
 categories:
-- "Assembly"
-- "RNA"
-- "Metagenomics"
+- Assembly
+- RNA
+- Metagenomics
 
 repositories:
   spades:
     description: Genome assembler for genomes of regular and single-cell projects.
     long_description: |
-        SPAdes is a genome assembly algorithm which was designed for single cell and multi-cells bacterial data sets. Therefore, it might not be suitable for large genomes projects. SPAdes works with Ion Torrent, PacBio, Oxford Nanopore, and Illumina paired-end, mate-pairs and single reads.
+      SPAdes is a genome assembly algorithm which was designed for single cell and multi-cells bacterial data sets. Therefore, it might not be suitable for large genomes projects. SPAdes works with Ion Torrent, PacBio, Oxford Nanopore, and Illumina paired-end, mate-pairs and single reads.
     include:
       - test-data
       - spades.xml
@@ -22,7 +22,7 @@ repositories:
   spades_rnaviralspades:
     description: De novo assembler for transcriptomes, metatranscriptomes and metaviromes.
     long_description: |
-        rnaviralSPAdes is a pipeline specially designed for de novo assembler tailored for RNA viral datasets (transcriptome, metatranscriptome and metavirome).
+      rnaviralSPAdes is a pipeline specially designed for de novo assembler tailored for RNA viral datasets (transcriptome, metatranscriptome and metavirome).
     include:
       - test-data
       - rnaviralspades.xml
@@ -40,7 +40,7 @@ repositories:
   spades_plasmidspades:
     description: Extract and assembly plasmids from WGS data.
     long_description: |
-        plasmidSPAdes is a pipeline for assembling plasmid data sets. Ihas the potential to massively increase the throughput of plasmid sequencing and to provide information about plasmids in thousands of sequenced bacterial genomes by re-assembling their genomes, identifying their plasmids and supplementing the corresponding GenBank entries with the plasmid annotations
+      plasmidSPAdes is a pipeline for assembling plasmid data sets. Ihas the potential to massively increase the throughput of plasmid sequencing and to provide information about plasmids in thousands of sequenced bacterial genomes by re-assembling their genomes, identifying their plasmids and supplementing the corresponding GenBank entries with the plasmid annotations
     include:
       - test-data
       - plasmidspades.xml
@@ -49,7 +49,7 @@ repositories:
   spades_metaviralspades:
     description: Extract and assembly viral genomes from metagenomic data.
     long_description: |
-        metaplasmidSPAdes is a pipeline for assembling plasmids from metagenomic data sets.
+      metaplasmidSPAdes is a pipeline for assembling plasmids from metagenomic data sets.
     include:
       - test-data
       - metaviralspades.xml
@@ -58,7 +58,7 @@ repositories:
   metaspades:
     description: A pipeline for metagenomic data sets.
     long_description: |
-        metaSPAdes is a pipeline for assembling metagenomic data sets. metaSPAdes focuses on reconstructing a consensus backbone of a strain mixture, thus ignoring some strain-specific features corresponding to rare strains.
+       metaSPAdes is a pipeline for assembling metagenomic data sets. metaSPAdes focuses on reconstructing a consensus backbone of a strain mixture, thus ignoring some strain-specific features corresponding to rare strains.
     include:
       - test-data
       - metaspades.xml
@@ -67,7 +67,7 @@ repositories:
   spades_metaplasmidspades:
     description: Extract and assembly plasmids from metagenomic data.
     long_description: |
-        metaplasmidSPAdes is a pipeline for assembling plasmids from metagenomic data sets.
+      metaplasmidSPAdes is a pipeline for assembling plasmids from metagenomic data sets.
     include:
       - test-data
       - metaplasmidspades.xml
@@ -86,7 +86,7 @@ repositories:
   spades_biosyntheticspades:
     description: Biosynthetic gene cluster assembly.
     long_description: |
-         biosyntheticSPAdes is a pipeline for biosynthetic gene cluster assembly.
+      biosyntheticSPAdes is a pipeline for biosynthetic gene cluster assembly.
     include:
       - test-data
       - biosyntheticspades.xml
@@ -96,5 +96,4 @@ suite:
   name: "suite_spades"
   description: "SPAdes - St. Petersburg genome assembler - is an assembly toolkit containing various assembly pipelines."
   long_description: |
-    metaSPAdes is a pipeline for metagenomic data sets. plasmidSPAdes is a pipeline for extracting and assembling plasmids from WGS data sets. metaplasmidSPAdes is a pipeline for extracting and assembling plasmids from metagenomic data sets. rnaSPAdes is a de novo transcriptome assembler from RNA-Seq data. truSPAdes is a module for TruSeq barcode assembly. biosyntheticSPAdes is a module for biosynthetic gene cluster assembly with paired-end reads. coronaSPAdes is a tool for de novo SARS-CoV-2 genome assembly. rnaviralSPAdes is a pipeline specially designed for de novo assembler tailored for RNA viral da\
-tasets (transcriptome, metatranscriptome and metavirome).
+    metaSPAdes is a pipeline for metagenomic data sets. plasmidSPAdes is a pipeline for extracting and assembling plasmids from WGS data sets. metaplasmidSPAdes is a pipeline for extracting and assembling plasmids from metagenomic data sets. rnaSPAdes is a de novo transcriptome assembler from RNA-Seq data. truSPAdes is a module for TruSeq barcode assembly. biosyntheticSPAdes is a module for biosynthetic gene cluster assembly with paired-end reads. coronaSPAdes is a tool for de novo SARS-CoV-2 genome assembly. rnaviralSPAdes is a pipeline specially designed for de novo assembler tailored for RNA viral datasets (transcriptome, metatranscriptome and metavirome).
