Update owner metaspades

--- a/tools/spades/.shed.yml
+++ b/tools/spades/.shed.yml
@@ -63,7 +63,8 @@ repositories:
       - test-data
       - metaspades.xml
       - macros.xml
-
+    owner: nlm
+    
   spades_metaplasmidspades:
     description: Extract and assembly plasmids from metagenomic data.
     long_description: |
