--- a/tools/spades/.shed.yml
+++ b/tools/spades/.shed.yml
@@ -63,7 +63,7 @@ repositories:
       - test-data
       - metaspades.xml
       - macros.xml
-    owner: nlm
+    owner: nml
     
   spades_metaplasmidspades:
     description: Extract and assembly plasmids from metagenomic data.
