--- a/tools/spades/.shed.yml
+++ b/tools/spades/.shed.yml
@@ -18,6 +18,7 @@ repositories:
       - test-data
       - spades.xml
       - macros.xml
+    owner: nml
 
   spades_rnaviralspades:
     description: De novo assembler for transcriptomes, metatranscriptomes and metaviromes.
