Add poly-A trimming, fix tests, address wm75 comments

--- a/tools/read-it-and-keep/.shed.yml
+++ b/tools/read-it-and-keep/.shed.yml
@@ -1,6 +1,6 @@
 categories:
 - Sequence Analysis
-description: 'rapid decontamination of SARS-CoV-2 sequencing reads'
+description: 'Rapid decontamination of SARS-CoV-2 sequencing reads'
 homepage_url: https://github.com/GenomePathogenAnalysisService/read-it-and-keep
 long_description: |
   ReadItAndKeep is a lightweight tool for removing non-viral (e.g. host)
