include write_tsv_script.py in the .shed.yml file for all but rnaspades

--- a/tools/spades/.shed.yml
+++ b/tools/spades/.shed.yml
@@ -18,6 +18,7 @@ repositories:
       - test-data
       - spades.xml
       - macros.xml
+      - write_tsv_script.py
     owner: nml
 
   spades_rnaviralspades:
@@ -28,6 +29,7 @@ repositories:
       - test-data
       - rnaviralspades.xml
       - macros.xml
+      - write_tsv_script.py
 
   rnaspades:
     description: De novo transcriptome assembler.
@@ -46,6 +48,7 @@ repositories:
       - test-data
       - plasmidspades.xml
       - macros.xml
+      - write_tsv_script.py
 
   spades_metaviralspades:
     description: Extract and assembly viral genomes from metagenomic data.
@@ -55,6 +58,7 @@ repositories:
       - test-data
       - metaviralspades.xml
       - macros.xml
+      - write_tsv_script.py
 
   metaspades:
     description: A pipeline for metagenomic data sets.
@@ -64,6 +68,7 @@ repositories:
       - test-data
       - metaspades.xml
       - macros.xml
+      - write_tsv_script.py
     owner: nml
     
   spades_metaplasmidspades:
@@ -74,6 +79,7 @@ repositories:
       - test-data
       - metaplasmidspades.xml
       - macros.xml
+      - write_tsv_script.py
 
   spades_coronaspades:
     description: SARS-CoV-2 de novo genome assembler.
@@ -84,6 +90,7 @@ repositories:
       - test-data
       - coronaspades.xml
       - macros.xml
+      - write_tsv_script.py
 
   spades_biosyntheticspades:
     description: Biosynthetic gene cluster assembly.
@@ -93,6 +100,7 @@ repositories:
       - test-data
       - biosyntheticspades.xml
       - macros.xml
+      - write_tsv_script.py
     
 suite:
   name: "suite_spades"
