--- a/tools/read_it_and_keep/.shed.yml
+++ b/tools/read_it_and_keep/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   ReadItAndKeep is a lightweight tool for removing non-viral (e.g. host)
   contamination from SARS-CoV-2 viral sequence reads by mapping
   against the viral reference genome.
-name: read-it-and-keep
+name: read_it_and_keep
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/read-it-and-keep
 type: unrestricted
