--- a/tools/syndiva/.shed.yml
+++ b/tools/syndiva/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
   This diversity is generated in the context of a project of directed evolution using a phage display approach, 
   to obtain ligands with high affinity and specificity for biological targets. It was introduced in three loops 
   of the domain. It is both a variation of amino acids and a variation of the lengths of loops.
-name: SynDivA
+name: syndiva
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/SynDivA
 type: unrestricted
