Change owner to iuc
Co-authored-by: Nicola Soranzo <nicola.soranzo@gmail.com>

--- a/tools/emboss/.shed.yml
+++ b/tools/emboss/.shed.yml
@@ -8,6 +8,6 @@ long_description: |
     source software tools for molecular biology. It includes over 200 applications for molecular sequence analysis
     and other common tasks in bioinformatics.
 name: emboss
-owner: devteam
+owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/emboss
 type: unrestricted
