--- a/tools/emboss/.shed.yml
+++ b/tools/emboss/.shed.yml
@@ -2,7 +2,7 @@ categories:
 - Sequence Analysis
 - Fasta Manipulation
 description: EMBOSS tools
-homepage_url: http://emboss.open-bio.org/
+homepage_url: http://emboss.sourceforge.net/
 long_description: |
     The European Molecular Biology Open Software Suite (EMBOSS) is a high quality, well documented package of open
     source software tools for molecular biology. It includes over 200 applications for molecular sequence analysis
