fixed tool data table and added more parameters

--- a/tools/clair3/tool-data/model.loc.sample
+++ b/tools/clair3/tool-data/model.loc.sample
@@ -7,4 +7,4 @@
 #<unique_build_id> <display_name>	<file_path>
 #
 #So, all_model.loc could look something like this:
-test_model "r941_prom_hac_g360+g422" ${__HERE__}models/r941_prom_hac_g360+g422
+#test_model	"r941_prom_hac_g360+g422"	${__HERE__}models/r941_prom_hac_g360+g422
