--- a/tools/clair3/tool_data_table_conf.xml.sample
+++ b/tools/clair3/tool_data_table_conf.xml.sample
@@ -1,11 +1,12 @@
+<?xml version="1.0"?>
 <tables>
     <!-- Locations of indexes in the Bowtie mapper format -->
-    <table name="models" comment_char="#">
+    <table name="model" comment_char="#">
         <columns>value, name, path</columns>
-        <file path="./models.loc" />
+        <file path="tool-data/model.loc" />
     </table>
     <table name="all_fasta" comment_char="#">
         <columns>value, name, path</columns>
-        <file path="./all_fasta.loc" />
+        <file path="tool-data/all_fasta.loc" />
     </table>
 </tables>
