update rpextractsink to 5.12.1

--- a/tools/rpextractsink/.shed.yml
+++ b/tools/rpextractsink/.shed.yml
@@ -5,7 +5,7 @@ long_description: 'Sink refers to the collection of chemical species used by the
   algorithm of RetroPath2.0 to finish metabolic route exploration. This tool uses
   an SBML file of the desired chassis organism, parses all the molecules within a
   specified compartment (example: cytoplasm, Golgi apparatus, nucleus, etc) and uses
-  its MIRIAM annotation to find their InChI structures. Source code may be found at
-  the following location: https://github.com/brsynth/rptools/tree/master/rptools/rpextractsink'
+  its MIRIAM annotation to find their InChI structures.'
 name: rpextractsink
 owner: iuc
+homepage_url: https://github.com/brsynth/rptools/tree/master/rptools/rpextractsink
