Added output select options. Despite output stays apparently the same. Filters need fixing

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ tool_test_output.json
 
 # VScode configuration
 .vscode
+tools/clair3/test-data/run_clair3.log
+tools/clair3/test-data/test1.bam.bai
+tools/clair3/test-data/test1.fasta.fai
