--- a/tools/links/.shed.yml
+++ b/tools/links/.shed.yml
@@ -1,5 +1,5 @@
 name: links
-owner: galaxy-australia
+owner: iuc
 description: Scaffold genome assemblies with long reads.
 homepage_url: https://github.com/bcgsc/LINKS
 long_description: |
