Sync CI workflows with tools-devteam

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ env:
 jobs:
   setup:
     name: Setup cache and determine changed repositories
-    if: github.repository_owner == 'galaxyproject'
+    if: ${{ github.repository_owner == 'galaxyproject' }}
     runs-on: ubuntu-latest
     outputs:
       galaxy-head-sha: ${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
