--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -6,8 +6,8 @@ env:
   MAX_CHUNKS: 4
   MAX_FILE_SIZE: 1M
 concurrency:
-  # group runs by PR, but keep runs on master separate
-  # because we do not want to cancel toolshed uploads
+  # Group runs by PR, but keep runs on the default branch separate
+  # because we do not want to cancel ToolShed uploads
   group: pr-${{ (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main') && github.run_number || github.ref }}
   cancel-in-progress: true
 jobs:
@@ -98,8 +98,6 @@ jobs:
       matrix:
         python-version: ['3.7']
     steps:
-    # checkout the repository
-    # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
@@ -222,8 +220,6 @@ jobs:
     needs: setup
     if: ${{ github.event_name == 'pull_request' && needs.setup.outputs.repository-list != '' }}
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
     steps:
     - uses: actions/checkout@v2
       with:
@@ -268,8 +264,6 @@ jobs:
         ports:
           - 5432:5432
     steps:
-    # checkout the repository
-    # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
