--- a/tools/phyloseq/.shed.yml
+++ b/tools/phyloseq/.shed.yml
@@ -1,18 +1,18 @@
-name: dada2_phyloseq
+name: phyloseq
 owner: iuc
-description: Various phyloseq plots of DADA2 outputs.
+description: A suite of tools that produce various phyloseq plots.
 long_description: |
-    Various phyloseq plots of DADA2 outputs.
+  A suite of tools that produce various phyloseq plots.
 categories:
 - Metagenomics
-remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/dada2_phyloseq
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/phyloseq
 homepage_url: https://www.bioconductor.org/packages/release/bioc/html/phyloseq.html
 type: unrestricted
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
   description_template: "Phyloseq plot {{ tool_name }}."
 suite:
-  name: "suite_dada2_phyloseq"
-  description: "A suite of tools that plots outputs from the DADA2 suite of tools."
+  name: "suite_phyloseq"
+  description: "A suite of tools that produce various phyloseq plots."
   long_description: |
-      Various phyloseq plots of DADA2 outputs.
+      A suite of tools that produce various phyloseq plots.
