--- a/tools/phyloseq/.shed.yml
+++ b/tools/phyloseq/.shed.yml
@@ -1,8 +1,9 @@
 name: phyloseq
 owner: iuc
-description: A suite of tools that produce various phyloseq plots.
+description: Handling and analysis of high-throughput microbiome census data
 long_description: |
-  A suite of tools that produce various phyloseq plots.
+  phyloseq provides a set of classes and tools to facilitate the import, storage,
+  analysis, and graphical display of microbiome census data.
 categories:
 - Metagenomics
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/phyloseq
@@ -10,9 +11,10 @@ homepage_url: https://www.bioconductor.org/packages/release/bioc/html/phyloseq.h
 type: unrestricted
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
-  description_template: "Phyloseq plot {{ tool_name }}."
+  description_template: "Phyloseq {{ tool_name }}."
 suite:
   name: "suite_phyloseq"
-  description: "A suite of tools that produce various phyloseq plots."
+  description: Handling and analysis of high-throughput microbiome census data
   long_description: |
-      A suite of tools that produce various phyloseq plots.
+    phyloseq provides a set of classes and tools to facilitate the import, storage,
+    analysis, and graphical display of microbiome census data.
