--- a/tools/getorganelle/.shed.yml
+++ b/tools/getorganelle/.shed.yml
@@ -1,7 +1,7 @@
 categories:
     - Assembly
 description: |
-    GetOrganelle - This toolkit assemblies organelle genomes from genomic skimming data.
+    GetOrganelle - This toolkit assembles organelle genomes from genomic skimming data.
 long_description: |
     GetOrganelle is a toolkit to accurately assemble organelle genomes from whole genome sequencing data. 
     It recruits organelle-associated reads using a modified “baiting and iterative mapping” approach, conducts 
