Add code owners for viral lineage assignment tools

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -18,6 +18,8 @@
 /tools/minia/                           @nsoranzo
 /tools/mothur/                          @shiltemann
 /tools/ncbi_entrez_eutils/              @hexylena
+/tools/nextclade/                       @pvanheus @wm75
+/tools/pangolin/                        @pvanheus @wm75
 /tools/progressivemauve/                @hexylena
 /tools/prokka/                          @nsoranzo
 /tools/raxml/                           @nsoranzo
