--- a/tools/rpbasicdesign/.shed.yml
+++ b/tools/rpbasicdesign/.shed.yml
@@ -3,7 +3,7 @@ categories:
 description: Extracting enzyme IDs from rpSBML files
 homepage_url: https://github.com/brsynth/rpbasicdesign
 long_description: 'rpbasicdesign extracts enzyme IDs from rpSBML files -- produced by the
-  RP suite available in the SynBioCAD Galaxy platform -- to generate genetic constructs
+  RP suite available in SynBioCAD Galaxy platform -- to generate genetic constructs
   compliant with the BASIC assembly approach. CSV files produced are ready to be used
   with DNA-Bot to generate instructions for automated build of the genetic constructs
   using OpenTrons liquid handling robots.'
