--- a/tools/clair3/.shed.yml
+++ b/tools/clair3/.shed.yml
@@ -9,7 +9,7 @@ long_description: |
   method categories: pileup calling handles most variant candidates with speed, and full-alignment
   tackles complicated candidates to maximize precision and recall. Clair3 runs fast and has superior
   performance, especially at lower coverage. Clair3 is simple and modular for easy deployment and integration.
-name: clair
+name: clair3
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/clair3
 type: unrestricted
