--- a/tools/clair3/tool_data_table_conf.xml.sample
+++ b/tools/clair3/tool_data_table_conf.xml.sample
@@ -2,7 +2,7 @@
 <tables>
     <!-- Locations of indexes in the Bowtie mapper format -->
     <table name="model" comment_char="#">
-        <columns>value, name, path</columns>
+        <columns>value, name, platform, path</columns>
         <file path="tool-data/model.loc" />
     </table>
     <table name="all_fasta" comment_char="#">
