--- a/tools/recentrifuge/.shed.yml
+++ b/tools/recentrifuge/.shed.yml
@@ -1,13 +1,13 @@
-name: recentrifuge
-owner: aubi
+name: "recentrifuge"
+owner: "iuc"
 long_description: |
-  With Recentrifuge, researchers can analyze results from taxonomic classifiers using interactive charts with emphasis on the confidence level of the classifications.
+  "With Recentrifuge, researchers can analyze results from taxonomic classifiers using interactive charts with emphasis on the confidence level of the classifications.
   In addition to contamination-subtracted samples.Recentrifuge provides shared and exclusive taxa per sample,
-  thus enabling robust contamination removal and comparative analysis in environmental and clinical metagenomics.
+  thus enabling robust contamination removal and comparative analysis in environmental and clinical metagenomics."
 categories:
 - Metagenomics
-remote_repository_url: https://github.com/mesocentre-clermont-auvergne/galaxy-tools/tree/master/tools/recentrifuge
-homepage_url: https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006967
+remote_repository_url: "https://github.com/mesocentre-clermont-auvergne/galaxy-tools/tree/master/tools/recentrifuge"
+homepage_url: "https://github.com/khyox/recentrifuge"
 type: unrestricted
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
