--- a/tools/recentrifuge/tool_data_table_conf.xml.sample
+++ b/tools/recentrifuge/tool_data_table_conf.xml.sample
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <tables>
-    <table name="rcf_database" comment_char="#">
-        <columns>value, name, dbkey, path</columns>
-        <file path="tool-data/rcf_database.loc.sample" />
+    <table name="recentrifuge_database" comment_char="#">
+        <columns>value, name, path</columns>
+        <file path="tool-data/recentrifuge_database.loc.sample" />
     </table>
 </tables>
