--- a/tools/coverm/.shed.yml
+++ b/tools/coverm/.shed.yml
@@ -13,7 +13,7 @@ auto_tool_repositories:
     name_template: "{{ tool_id }}"
     description_template: "Wrapper for CoverM tool: {{ tool_name }}."
 suite:
-    name: "CoverM"
+    name: "suite_coverm"
     description: "DNA read coverage and relative abundance calculator"
     long_description: |
         CoverM
