--- a/tools/bakta/tool-data/bakta_database.loc.sample
+++ b/tools/bakta/tool-data/bakta_database.loc.sample
@@ -1,4 +1,3 @@
 #This is a sample file distributed with Galaxy that enables tools
-#to use a directory of metagenomics files.
 #file has this format (white space characters are TAB characters)
-test-db-2022	"Test Database"  ${__HERE__}/test-db
+test-db-bakta "Database test"	${__HERE__}/test-db
