--- a/tools/bakta/tool_data_table_conf.xml.sample
+++ b/tools/bakta/tool_data_table_conf.xml.sample
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <tables>
-    <table name="recentrifuge_database" comment_char="#">
+    <table name="bakta_database" comment_char="#">
         <columns>value, name, path</columns>
         <file path="tool-data/bakta_database.loc.sample" />
     </table>
