--- a/tools/prot-scriber/.shed.yml
+++ b/tools/prot-scriber/.shed.yml
@@ -1,4 +1,4 @@
-name: prot-scriber
+name: prot_scriber
 owner: iuc
 description: Protein annotation of short human readable descriptions
 homepage_url: "https://github.com/usadellab/prot-scriber"
