--- a/tools/orfipy/.shed.yml
+++ b/tools/orfipy/.shed.yml
@@ -3,7 +3,7 @@ categories:
 description: Galaxy wrapper for ORFIPY
 homepage_url: https://github.com/urmi-21/orfipy
 long_description: |
-  ORFIPY is a versatile ORF finder
+  orfipy is a versatile ORF finder
 name: orfipy
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/orfipy
