Better comment on timeout
Co-authored-by: Nicola Soranzo <nicola.soranzo@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -123,7 +123,7 @@ jobs:
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
         galaxy-slots: ${{ steps.cpu-cores.outputs.count }}
-        # Limit inidividual test to 15 minutes
+        # Limit each test to 15 minutes
         test_timeout: 900
     - uses: actions/upload-artifact@v2
       with:
