--- a/tools/seqcomplexity/.shed.yml
+++ b/tools/seqcomplexity/.shed.yml
@@ -1,4 +1,4 @@
-owner: stephenshank
+owner: iuc
 description: "Sequence complexity for raw reads"
 homepage_url: https://github.com/stevenweaver/seqcomplexity
 long_description: |
@@ -6,7 +6,7 @@ long_description: |
 remote_repository_url: https://github.com/stephenshank/tools-iuc/tree/seqcomplexity/tools/seqcomplexity/
 type: unrestricted
 categories:
-- Sequence Analysis
+  - Sequence Analysis
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
   description_template: "Calculates Per-Read and Total Sequence Complexity from FastQ file."
