--- a/tools/vcf2maf/.shed.yml
+++ b/tools/vcf2maf/.shed.yml
@@ -6,7 +6,7 @@ long_description: |
     into the Mutation Annotation Format (MAF). A central part of the conversion 
     process is the selection of a single effect per variant. While this is often 
     a subjective decision, vcf2maf offers a standardized way to achieve this by 
-    optionally utilizing Ensembl's VEP.
+    optionally utilizing Ensembl's Variant Effect Predictor (VEP).
 name: vcf2maf
 owner: iuc
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/vcf2maf
