Introduced symlinks, added test for fasta_indexes table

--- a/tools/vcf2maf/tool_data_table_conf.xml.sample
+++ b/tools/vcf2maf/tool_data_table_conf.xml.sample
@@ -9,4 +9,9 @@
         <columns>value, name, len_path</columns>
         <file path="tool-data/dbkeys.loc" />
     </table>
+    <!-- Location of SAMTools indexes for FASTA files -->
+    <table name="fasta_indexes" comment_char="#">
+        <columns>value, dbkey, name, path</columns>
+        <file path="tool-data/fasta_indexes.loc" />
+    </table>
 </tables>
