--- a/tools/selenzy_wrapper/.shed.yml
+++ b/tools/selenzy_wrapper/.shed.yml
@@ -6,6 +6,6 @@ long_description: 'Selenzy performs enzyme sequence selection from a reaction qu
   The tool can be queried using a reaction template such as the reaction rules in
   RetroRules(https://github.com/brsynth/RRParser). This feature makes this tool especially
   useful in combination with RetroPath2.0 (https://github.com/brsynth/RetroPath2-wrapper).'
-name: selenzy-wrapper
+name: selenzy_wrapper
 owner: iuc
-remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/selenzy-wrapper
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/selenzy_wrapper
