--- a/tools/quickmerge/.shed.yml
+++ b/tools/quickmerge/.shed.yml
@@ -1,5 +1,6 @@
 name: quickmerge
 owner: galaxy-australia
+homepage_url: https://github.com/mahulchak/quickmerge
 remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/quickmerge
 categories:
   - Assembly
