--- a/tools/getorganelle/tool_data_table_conf.xml.sample
+++ b/tools/getorganelle/tool_data_table_conf.xml.sample
@@ -2,7 +2,7 @@
 <tables>
     <!-- Location of seed and label data for getorganelle -->
     <table name="getorganelle" comment_char="#">
-        <columns>value, name, type, path, db</columns>
+        <columns>value, name, path, db-version</columns>
         <file path="tool-data/getorganelle.loc" />
     </table>
 </tables>
