Add @neoformit to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -29,3 +29,5 @@
 /tools/sickle/                          @nsoranzo
 /tools/stringtie/                       @nsoranzo
 /tools/ucsc_tools/                      @nsoranzo
+/tools/quickmerge/                      @neoformit
+/tools/smudgeplot/                      @neoformit
