Arriba changes for suggestions
Updated to Arriba version 2.3.0
Require STAR bam as input.
Include test data for toolshed.
Use profile.

--- a/tools/arriba/tool_data_table_conf.xml.sample
+++ b/tools/arriba/tool_data_table_conf.xml.sample
@@ -1,6 +1,7 @@
 <tables>
-    <table name="arriba_indexes" comment_char="#" allow_duplicate_entries="False">
-        <columns>value, name, fasta, gtf, star_index</columns>
-        <file path="tool-data/arriba_indexes.loc" />
+    <!-- Locations of all fasta files under genome directory -->
+    <table name="all_fasta" comment_char="#" allow_duplicate_entries="False">
+        <columns>value, dbkey, name, path</columns>
+        <file path="tool-data/all_fasta.loc" />
     </table>
 </tables>
