try workaround for URL lint problem

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -110,6 +110,14 @@ jobs:
       with:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
+    - name: workaround
+      run: |
+        echo "openssl_conf = default_conf" > /tmp/openssl.cnf
+        cat /etc/ssl/openssl.cnf >> /tmp/openssl.cnf
+        echo -e "[ default_conf ]\n\nssl_conf = ssl_sect\n\n[ssl_sect]\n\nsystem_default = system_default_sect\n\n[system_default_sect]\nMinProtocol = TLSv1.2\nCipherString = DEFAULT:@SECLEVEL=1" >> /tmp/openssl.cnf
+        sudo mv /tmp/openssl.cnf /etc/ssl/openssl.cnf
+    - name: show workaround
+      run: cat /etc/ssl/openssl.cnf
     - name: Planemo lint
       uses: galaxyproject/planemo-ci-action@v1
       id: lint
