--- a/tools/TEfinder/.shed.yml
+++ b/tools/TEfinder/.shed.yml
@@ -4,4 +4,5 @@ description: Transposable element insertions finder
 long_description: TEfinder uses discordant reads to detect novel transposable element
   insertion events in paired-end sample sequencing data
 name: te_finder_1
-owner: namhsuya
+owner: iuc
+homepage_url: https://github.com/VistaSohrab/TEfinder
