--- a/tools/TEfinder/.shed.yml
+++ b/tools/TEfinder/.shed.yml
@@ -6,3 +6,5 @@ long_description: TEfinder uses discordant reads to detect novel transposable el
 name: te_finder_1
 owner: iuc
 homepage_url: https://github.com/VistaSohrab/TEfinder
+remote_repository_url: 
+type: unrestricted
