--- a/tools/TEfinder/.shed.yml
+++ b/tools/TEfinder/.shed.yml
@@ -3,8 +3,8 @@ categories:
 description: Transposable element insertions finder
 long_description: TEfinder uses discordant reads to detect novel transposable element
   insertion events in paired-end sample sequencing data
-name: te_finder_1
+name: te_finder
 owner: iuc
 homepage_url: https://github.com/VistaSohrab/TEfinder
-remote_repository_url: 
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/te_finder/
 type: unrestricted
