--- a/tools/circexplorer2/.shed.yml
+++ b/tools/circexplorer2/.shed.yml
@@ -1,6 +1,6 @@
 categories:
 - RNA
-- assembly
+- Assembly
 description: Comprehensive and integrative circular RNA analysis toolset.
 long_description: |
    CIRCexplorer2 is a comprehensive and integrative circular RNA analysis toolset. 
