--- a/tools/kraken_biom/.shed.yml
+++ b/tools/kraken_biom/.shed.yml
@@ -1,4 +1,4 @@
-name: kraken-biom
+name: kraken_biom
 owner: iuc
 description: Create BIOM-format tables (http://biom-format.org) from Kraken output (http://ccb.jhu.edu/software/kraken/)
 homepage_url: https://github.com/smdabdoub/kraken-biom
