--- a/tools/kraken_biom/.shed.yml
+++ b/tools/kraken_biom/.shed.yml
@@ -4,4 +4,4 @@ description: Create BIOM-format tables (http://biom-format.org) from Kraken outp
 homepage_url: https://github.com/smdabdoub/kraken-biom
 remote_repository_url: https://github.com/smdabdoub/kraken-biom
 categories:
-  - Metagenomics Analysis
+  - Metagenomics
