update ini to be close to ini generated by wrapper

--- a/tools/pygenometracks/test-data/test15.ini
+++ b/tools/pygenometracks/test-data/test15.ini
@@ -12,6 +12,8 @@ arrowhead_included = false
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
@@ -27,6 +29,8 @@ arrow_interval = 10
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
@@ -43,6 +47,8 @@ color_utr = grey
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
@@ -60,6 +66,8 @@ arrow_length = 5000
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
