--- a/tools/pygenometracks/test-data/test7.ini
+++ b/tools/pygenometracks/test-data/test7.ini
@@ -1,6 +1,6 @@
 [x-axis]
 where = top
-[genes_0_0]
+[genes_1_0]
 file = test-data/dm3_genes.bed.gz
 title = genes
 color = #000000
@@ -8,16 +8,18 @@ border_color = #000000
 style = flybase
 height_utr = 1.0
 color_utr = grey
+arrowhead_included = false
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
 line_width = 0.5
-arrowhead_included = false
 overlay_previous = no
-[genes_1_0]
+[genes_2_0]
 file = test-data/dm3_subset_BDGP5.78.gtf.gz
 prefered_name = gene_name
 merge_transcripts = true
@@ -27,16 +29,18 @@ border_color = #000000
 style = flybase
 height_utr = 0.75
 color_utr = #ff0000
+arrowhead_included = false
 display = stacked
 height = 10.0
 labels = true
-file_type = bed
+all_labels_inside = false
+labels_in_margin = false
+file_type = gtf
 global_max_row = false
 max_labels = 60
 line_width = 0.5
-arrowhead_included = false
 overlay_previous = no
-[genes_2_0]
+[genes_3_0]
 file = test-data/dm3_genes_withrgbandscore.bed.gz
 title = genes with scores
 color = cool_r
@@ -44,33 +48,37 @@ border_color = #000000
 style = flybase
 height_utr = 1.0
 color_utr = grey
+arrowhead_included = false
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
 line_width = 0.5
-arrowhead_included = false
 overlay_previous = no
-[genes_3_0]
+[genes_4_0]
 file = test-data/dm3_genes_withrgbandscore.bed.gz
 title = genes with utr as bed_rgb
-color = black
+color = #000000
 border_color = #000000
 style = flybase
 height_utr = 1.0
 color_utr = bed_rgb
+arrowhead_included = false
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
 line_width = 0.5
-arrowhead_included = false
 overlay_previous = no
-[genes_3_0]
+[genes_5_0]
 file = test-data/dm3_genes_withrgbandscore.bed.gz
 title = genes with coding as bed_rgb - labels_in_margin
 color = bed_rgb
@@ -78,17 +86,18 @@ border_color = #000000
 style = flybase
 height_utr = 1.0
 color_utr = grey
+arrowhead_included = false
 display = stacked
 height = 10.0
 labels = true
+all_labels_inside = false
 labels_in_margin = true
 file_type = bed
 global_max_row = false
 max_labels = 60
 line_width = 0.5
-arrowhead_included = false
 overlay_previous = no
-[genes_4_0]
+[genes_6_0]
 file = test-data/dm3_genes_withrgbandscore.bed.gz
 title = genes bed_rgb like - all_labels_inside
 color = bed_rgb
@@ -96,13 +105,14 @@ border_color = #000000
 style = flybase
 height_utr = 1.0
 color_utr = bed_rgb
+arrowhead_included = false
 display = stacked
 height = 10.0
 labels = true
 all_labels_inside = true
+labels_in_margin = false
 file_type = bed
 global_max_row = false
 max_labels = 60
 line_width = 0.5
-arrowhead_included = false
 overlay_previous = no
